# personal-stock-screener

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml  setup.sh
backend/: Dockerfile  init_db.py  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: alerts.py  auth.py  screening.py  stocks.py
backend/src/core/: __init__.py  config.py  database.py  logging.py  redis_client.py  security.py
backend/src/ingestion/: __init__.py  base.py  fundamental_ingestor.py  news_ingestor.py
backend/src/models/: __init__.py  auth.py  database.py  schemas.py
backend/src/scoring/: __init__.py  composite_scorer.py  fundamental_scorer.py
backend/src/sentiment/: __init__.py  analyzer.py
backend/src/tasks/: __init__.py  celery_app.py  ingestion_tasks.py  scoring_tasks.py
backend/tests/: test_backend_services.py
frontend/: .env.example  .gitignore  Dockerfile  app.py
frontend/.streamlit/: config.toml
frontend/pages/: 0_🔑_Login.py  1_🏠_Home.py  2_🔍_Screener.py  3_📊_Stock_Details.py  4_📈_Rankings.py
frontend/utils/: api_client.py  config.py
