[project]
name = "personal-stock-screener"
version = "1.0.0"
description = "Production-ready Personal Stock Screener with Sentiment Analysis for Indian Equities"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Personal Stock Screener Team"}
]
keywords = ["stock", "screener", "sentiment-analysis", "fintech", "indian-stocks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    
    # Redis & Caching
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    
    # Task Queue
    "celery>=5.3.6",
    "celery[redis]>=5.3.6",
    "flower>=2.0.1",
    
    # HTTP Client
    "httpx>=0.26.0",
    "requests>=2.31.0",
    
    # ML & NLP for Sentiment Analysis
    "transformers>=4.37.0",
    "torch>=2.1.2",
    "sentencepiece>=0.1.99",
    "accelerate>=0.26.0",
    
    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "yfinance>=0.2.35",
    
    # Utilities
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.2.0",
    
    # Code Quality
    "black>=24.1.1",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    
    # Development
    "watchdog>=3.0.0",
    "ipython>=8.20.0",
]

[project.scripts]
stock-screener = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Pydantic Configuration
[tool.pydantic]
# Enable strict mode for better type safety
use_enum_values = true

# Black Configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# Ruff Configuration (replaces flake8, isort)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# MyPy Configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "yfinance.*",
    "transformers.*",
    "torch.*",
    "redis.*",
]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["backend"]

# Coverage Configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Poe the Poet - Task Runner Configuration
[tool.poe.tasks]

[tool.poe.tasks.format]
help = "Format code with black and ruff"
sequence = [
    {cmd = "black src tests"},
    {cmd = "ruff check --fix src tests"},
]

[tool.poe.tasks.lint]
help = "Run linting checks"
sequence = [
    {cmd = "black --check src tests"},
    {cmd = "ruff check src tests"},
    {cmd = "mypy src"},
]

[tool.poe.tasks.test]
help = "Run tests with pytest"
cmd = "pytest tests/ -v"

[tool.poe.tasks.test-cov]
help = "Run tests with coverage"
cmd = "pytest tests/ -v --cov=src --cov-report=html --cov-report=term"

[tool.poe.tasks.docker-up]
help = "Start all Docker services"
cmd = "docker-compose up -d"

[tool.poe.tasks.docker-down]
help = "Stop all Docker services"
cmd = "docker-compose down"

[tool.poe.tasks.docker-logs]
help = "View Docker logs"
cmd = "docker-compose logs -f"

[tool.poe.tasks.init-db]
help = "Initialize database with tables and seed data"
cmd = "docker-compose exec backend python init_db.py"

[tool.poe.tasks.ingest-fundamentals]
help = "Run fundamental data ingestion"
cmd = """docker-compose exec backend python -c "from src.tasks.ingestion_tasks import ingest_fundamental_data; print(ingest_fundamental_data())" """

[tool.poe.tasks.ingest-news]
help = "Run news data ingestion"
cmd = """docker-compose exec backend python -c "from src.tasks.ingestion_tasks import ingest_news_data; print(ingest_news_data())" """

[tool.poe.tasks.analyze-sentiment]
help = "Analyze sentiment for pending news"
cmd = """docker-compose exec backend python -c "from src.tasks.ingestion_tasks import analyze_pending_sentiment; print(analyze_pending_sentiment())" """

[tool.poe.tasks.compute-scores]
help = "Compute composite scores for all stocks"
cmd = """docker-compose exec backend python -c "from src.tasks.scoring_tasks import compute_all_scores; print(compute_all_scores())" """

[tool.poe.tasks.run-all-tasks]
help = "Run full data pipeline: ingest fundamentals, news, analyze sentiment, compute scores"
sequence = ["ingest-fundamentals", "ingest-news", "analyze-sentiment", "compute-scores"]

[tool.poe.tasks.dev]
help = "Run development server"
cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"

[tool.poe.tasks.shell]
help = "Open IPython shell with app context"
cmd = "ipython"

[tool.poe.tasks.clean]
help = "Clean up generated files"
cmd = "find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name '*.pyc' -delete"
